convert p/lt screens

--- a/html/components/roster-tab/index.html
+++ b/html/components/roster-tab/index.html
@@ -1,6 +1,6 @@
 <table id="RosterTab" sbContext="ScoreBoard.CurrentGame">
   <tr>
-    <td sbForeach="Team">
+    <td sbForeach="Team: 1,2: only">
       <table class="Team">
         <tr class="Name">
           <td colspan="3" sbDisplay="Name" />
