--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -11,8 +11,8 @@
   </head>
   <body
     class="preload"
-    sbPrefix="$ = ScoreBoard.Settings.Setting(Overlay.Interactive."
-    sbCss="background-color: $BackgroundColor): toBackground | font-size: $Scaling): toPercent"
+    sbPrefix="$: ScoreBoard.Settings.Setting(Overlay.Interactive : )"
+    sbCss="background-color: $.BackgroundColor: toBackground | font-size: $.Scaling: toPercent"
   >
     <div id="logo"></div>
 
@@ -20,9 +20,9 @@
       <div class="PanelWrapperTop">
         <div
           class="TeamBox AnimatedPanel PanelHideTop Wrapper"
-          sbToggleClass="InJam: InJam | Show: $Score): === 'On' | JammerNames: $ShowJammers): === 'On' | AllNames: $ShowAllNames): === 'On' | Lineups: $ShowLineups): === 'On' | UseLT: /ScoreBoard.Settings.Setting(ScoreBoard.Penalties.UseLT)"
+          sbClass="InJam: InJam | Show: $.Score: === 'On' | JammerNames: $.ShowJammers: === 'On' | AllNames: $.ShowAllNames: === 'On' | Lineups: $.ShowLineups: === 'On' | UseLT: /ScoreBoard.Settings.Setting(ScoreBoard.Penalties.UseLT)"
         >
-          <div sbForeach="Team: 1,2" sbToggleClass="Lead: DisplayLead">
+          <div sbForeach="Team: 1,2: only" sbClass="Lead: DisplayLead">
             <div class="Indicator Box" sbCss="color: Color(overlay_fg) | background: Color(overlay_bg)">
               <div class="Clock ShowInJam" sbDisplay="StarPass, Lead, Lost: toIndicator"></div>
             </div>
@@ -33,17 +33,17 @@
                 <div class="JamScore" sbDisplay="JamScore"></div>
               </div>
               <div class="DotTimeouts Box">
-                <div class="Dot Timeout1" sbToggleClass="Used: Timeouts: <1"></div>
-                <div class="Dot Timeout2" sbToggleClass="Used: Timeouts: <2"></div>
-                <div class="Dot Timeout3" sbToggleClass="Used: Timeouts: <3"></div>
-                <div class="Dot OfficialReview1" sbToggleClass="Retained: RetainedOfficialReview | Used: OfficialReviews: <1"></div>
+                <div class="Dot Timeout1" sbClass="Used: Timeouts: <1"></div>
+                <div class="Dot Timeout2" sbClass="Used: Timeouts: <2"></div>
+                <div class="Dot Timeout3" sbClass="Used: Timeouts: <3"></div>
+                <div class="Dot OfficialReview1" sbClass="Retained: RetainedOfficialReview | Used: OfficialReviews: <1"></div>
               </div>
             </div>
             <div class="JammerWrapper">
               <div class="JammerBox ShowInJam Clock" sbCss="color: Color(overlay_fg) | background: Color(overlay_bg)">
                 <div
-                  sbForeach="Position: Jammer, Pivot, Blocker1, Blocker2, Blocker3"
-                  sbToggleClass="InBox: PenaltyBox | Penalized: CurrentPenalties: !== ''"
+                  sbForeach="Position: Jammer, Pivot, Blocker1, Blocker2, Blocker3: only"
+                  sbClass="InBox: PenaltyBox | Penalized: CurrentPenalties: !== ''"
                 >
                   <div class="Name" sbDisplay="Name"></div>
                   <div class="Number" sbDisplay="RosterNumber"></div>
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-        <div class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper" sbToggleClass="Show: $Clock): === 'On'">
+        <div class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper" sbClass="Show: $.Clock: === 'On'">
           <div
             class="ClockBarTop Wrapper Row SlideDown ClockNames ShowInJam ShowInLineup ShowInTimeout ShowInIntermission ShowInNoClock barBackgroundTop"
           >
@@ -72,8 +72,8 @@
 
           <div
             class="ClockBarMiddle Wrapper SlideDown ShowInIntermission ShowInLineup ShowInTimeout ShowInNoClock Box BigName ClockDescription"
-            sbPrefix="# = ScoreBoard.Settings.Setting(ScoreBoard.Intermission."
-            sbDisplay="Clock.(Intermission).Number, Clock(*).Running, TimeoutOwner, OfficialReviews, #PreGame), #Intermission), #Unofficial), #Official), #OfficialWithClock), OfficialScore, ClockDuringFinalScore#, Rule(Period.Number): toClockType"
+            sbPrefix="#: ScoreBoard.Settings.Setting(ScoreBoard.Intermission : )"
+            sbDisplay="Clock.(Intermission).Number, Clock(*).Running, TimeoutOwner, OfficialReviews, #.PreGame, #.Intermission, #.Unofficial, #.Official, #.OfficialWithClock, OfficialScore, ClockDuringFinalScore, Rule(Period.Number): toClockType"
           ></div>
           <div class="ClockBarBottom Wrapper Row BottomRow barBackgroundBottom">
             <div
@@ -98,8 +98,8 @@
           <div class="Wrapper Clock SlideDown ShowInIntermission ShowInLineup ShowInTimeout">
             <div
               class="Box BigName ShowInIntermission Clock"
-              sbPrefix="# = ScoreBoard.Settings.Setting(ScoreBoard.Intermission."
-              sbDisplay="#PreGame), #Intermission), #Unofficial), #Official), #OfficialWithClock), OfficialScore, ClockDuringFinalScore, Clock(Intermission).Number, Rule(Period.Number): intermissionDisplay"
+              sbPrefix="#: ScoreBoard.Settings.Setting(ScoreBoard.Intermission : )"
+              sbDisplay="#.PreGame, #.Intermission, #.Unofficial, #.Official, #.OfficialWithClock, OfficialScore, ClockDuringFinalScore, Clock(Intermission).Number, Rule(Period.Number): intermissionDisplay"
             ></div>
             <div
               class="Box BoxLarge TextCenter Time Clock ShowInIntermission"
@@ -109,7 +109,7 @@
           </div>
         </div>
 
-        <div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel NoLogo" sbToggleClass="Show: $Panel): ==='PPJBox'">
+        <div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel NoLogo" sbClass="Show: $.Panel: ==='PPJBox'">
           <h1>Points Per Jam</h1>
           <h4
             class="htop"
@@ -117,13 +117,13 @@
             sbDisplay="AlternateName(overlay),Name"
             sbCss="color: Color(overlay_fg) | background: Color(overlay_bg)"
           ></h4>
-          <div class="PPJContainer Wrapper" sbPrefix="t = ScoreBoard.CurrentGame.Team">
+          <div class="PPJContainer Wrapper" sbPrefix="t: ScoreBoard.CurrentGame.Team">
             <div class="Wrapper Team Team1">
               <div class="Period" sbForeach="Period">
                 <div
                   class="ColumnWidth GraphBlock"
                   sbForeach="Jam"
-                  sbToggleClass="Lead: TeamJam(1).Lead | Lost: TeamJam(1).Lost"
+                  sbClass="Lead: TeamJam(1).Lead | Lost: TeamJam(1).Lost"
                   sbCss="height: TeamJam(1).JamScore: toPpjColumnHeight | width: ScoreBoard.CurrentGame.Clock(Jam).Number: toPpjColumnWidth | margin-top: TeamJam(1).JamScore: toPpjMargin | background: t(1).Color(overlay_bg)"
                 >
                   <div class="JammerStar ColumnWidth"></div>
@@ -136,7 +136,7 @@
                 <div
                   class="ColumnWidth GraphBlock"
                   sbForeach="Jam"
-                  sbToggleClass="Lead: TeamJam(2).Lead | Lost: TeamJam(2).Lost"
+                  sbClass="Lead: TeamJam(2).Lead | Lost: TeamJam(2).Lost"
                   sbCss="height: TeamJam(2).JamScore: toPpjColumnHeight | width: ScoreBoard.CurrentGame.Clock(Jam).Number: toPpjColumnWidth | background: t(2).Color(overlay_bg)"
                 >
                   <div class="JammerStar ColumnWidth"></div>
@@ -153,10 +153,10 @@
           ></h4>
         </div>
 
-        <div sbForeach="Team">
+        <div sbForeach="Team: 1,2: only">
           <div
             class="RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel"
-            sbToggleClass="NoLogo: Logo: empty | Show1: $Panel): ==='RosterTeam1' | Show2: $Panel): ==='RosterTeam2'"
+            sbClass="NoLogo: Logo: empty | Show1: $.Panel: ==='RosterTeam1' | Show2: $.Panel: ==='RosterTeam2'"
           >
             <img class="TeamLogo" sbAttr="src: Logo" />
             <h1 sbDisplay="AlternateName(overlay),Name" sbCss="color: Color(overlay_fg) | background: Color(overlay_bg)"></h1>
@@ -164,13 +164,13 @@
           </div>
           <div
             class="RosterTeam LowerPart AnimationDelay PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel"
-            sbToggleClass="Show1: $Panel): ==='RosterTeam1' | Show2: $Panel): ==='RosterTeam2'"
+            sbClass="Show1: $.Panel: ==='RosterTeam1' | Show2: $.Panel: ==='RosterTeam2'"
           >
             <div class="Wrapper Team Team1 SortBox">
               <div
                 class="Skater"
                 sbForeach="Skater:: compareRosterNumber"
-                sbToggleClass="NoShow: Role: ==='NotInGame'"
+                sbClass="NoShow: Role: ==='NotInGame'"
                 sbAttr="rosterNumber: RosterNumber"
               >
                 <div
@@ -186,7 +186,7 @@
 
           <div
             class="PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel"
-            sbToggleClass="NoLogo: Logo: empty | Show1: $Panel): ==='PenaltyTeam1' | Show2: $Panel): ==='PenaltyTeam2'"
+            sbClass="NoLogo: Logo: empty | Show1: $.Panel: ==='PenaltyTeam1' | Show2: $.Panel: ==='PenaltyTeam2'"
           >
             <img class="TeamLogo" sbAttr="src: Logo" />
             <h1>Penalty Board</h1>
@@ -194,13 +194,13 @@
           </div>
           <div
             class="PenaltyTeam AnimationDelay LowerPart PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel"
-            sbToggleClass="Show1: $Panel): ==='PenaltyTeam1' | Show2: $Panel): ==='PenaltyTeam2'"
+            sbClass="Show1: $.Panel: ==='PenaltyTeam1' | Show2: $.Panel: ==='PenaltyTeam2'"
           >
             <div class="Wrapper Team Team1 SortBox">
               <div
                 class="Skater"
                 sbForeach="Skater:: compareRosterNumber"
-                sbToggleClass="NoShow: Role: ==='NotInGame'"
+                sbClass="NoShow: Role: ==='NotInGame'"
                 sbAttr="rosterNumber: RosterNumber"
               >
                 <div
@@ -210,15 +210,15 @@
                 ></div>
                 <div class="Name" sbDisplay="Name: toNbspIfEmpty">&nbsp;</div>
                 <div class="Penalties">
-                  <div class="Penalty" sbForeach="Penalty" sbDisplay="Code" sbToggleClass="NoShow: Id: == 0"></div>
+                  <div class="Penalty" sbForeach="Penalty" sbDisplay="Code" sbClass="NoShow: Id: == 0"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel" sbToggleClass="Show: $Panel): ==='Upcoming'">
-          <div sbContext="Team(1)" sbToggleClass="NoLogo: Logo: empty">
+        <div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel" sbClass="Show: $.Panel: ==='Upcoming'">
+          <div sbContext="Team(1)" sbClass="NoLogo: Logo: empty">
             <img class="TeamLogo" sbAttr="src: Logo" style="float: left" />
             <h1
               sbDisplay="AlternateName(overlay),Name"
@@ -227,7 +227,7 @@
             ></h1>
           </div>
           <div class="UpcomingVS">VS</div>
-          <div sbContext="Team(2)" sbToggleClass="NoLogo: Logo: empty">
+          <div sbContext="Team(2)" sbClass="NoLogo: Logo: empty">
             <img class="TeamLogo" sbAttr="src: Logo" style="float: right" />
             <h1
               sbDisplay="AlternateName(overlay),Name"
@@ -239,12 +239,12 @@
       </div>
 
       <div class="PanelWrapperLeft">
-        <div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft" sbToggleClass="Show: $Panel): ==='LowerThird'">
-          <h4 class="Line1" sbDisplay="$LowerThird.Line1)" />
+        <div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft" sbClass="Show: $.Panel: ==='LowerThird'">
+          <h4 class="Line1" sbDisplay="$.LowerThird.Line1" />
           <h5
             class="Line2"
-            sbDisplay="$LowerThird.Line2)"
-            sbCss="color: $LowerThird.Style),Team(*).Color(overlay_fg): toLowerThirdColorFg | background: $LowerThird.Style),Team(*).Color(overlay_bg): toLowerThirdColorBg"
+            sbDisplay="$.LowerThird.Line2"
+            sbCss="color: $.LowerThird.Style,Team(*).Color(overlay_fg): toLowerThirdColorFg | background: $.LowerThird.Style,Team(*).Color(overlay_bg): toLowerThirdColorBg"
           />
         </div>
       </div>
