--- a/html/styles/common.css
+++ b/html/styles/common.css
@@ -1,7 +1,7 @@
 .Hide { display: none; } 
 
-.Active { background: #70ff70; }
-.ClickMe { background: #ff9010; }
+.Active, .ui-button.Active, .ui-button:hover.Active { background: #70ff70; }
+.ClickMe, .ui-button.ClickMe, .ui-button:hover.ClickMe { background: #ff9010; }
 
 [context="pt"] .ShowSome:not(.ShowOnPt):not(.ShowOnPurePt) { display: none; }
 [context="lt"] .ShowSome:not(.ShowOnLt):not(.ShowOnPureLt) { display: none; }
