fix interaction between sbInclude and sbForeach on the same element

--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="/json/core.js"></script>
   </head>
   <body>
-    <div class="GameContext">
+    <div class="GameContext BothTeams">
       <div sbInclude="/components/game-advance/" class="Auto"></div>
-      <div sbForeach="Team: 1,2: only" sbInclude="/components/plt-input/" context="whiteboard" style="width: 50%; float: left"></div>
+      <div class="TeamContext" sbInclude="/components/plt-input/" context="whiteboard" style="width: 50%; float: left"></div>
     </div>
   </body>
 </html>
