--- a/html/styles/common.css
+++ b/html/styles/common.css
@@ -1,4 +1,5 @@
-.Hide { display: none; } 
+.Hide, .spinner.Hide { display: none; } 
+#Templates { display: none; }
 
 .Active, .ui-button.Active, .ui-button:hover.Active { background: #70ff70; }
 .ClickMe, .ui-button.ClickMe, .ui-button:hover.ClickMe { background: #ff9010; }
@@ -8,3 +9,24 @@
 [context="plt"] .ShowSome:not(.ShowOnPlt):not(.ShowOnPt):not(.ShowOnLt) { display: none; }
 [context="sheet"] .ShowSome:not(.ShowOnSheet):not(.ShowOnPt) { display: none; }
 [context="whiteboard"] .ShowSome:not(.ShowOnWhiteboard):not(.ShowOnPt) { display: none; }
+
+@keyframes spinner {
+    0%   { transform: translate3d(-50%, -50%, 0) rotate(0deg);   }
+    100% { transform: translate3d(-50%, -50%, 0) rotate(360deg); }
+}
+.spinner {
+    animation: 1.5s linear infinite spinner;
+    animation-play-state: inherit;
+    border: solid 4px #cfd0d1;
+    border-bottom-color: #1c87c9;
+    border-radius: 50%;
+    content: "";
+    height: 20px;
+    width: 20px;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    display: inline-block;
+    transform: translate3d(-50%, -50%, 0);
+    will-change: transform;
+}
