--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -38,8 +38,8 @@
   <tbody>
     <tr
       class="Skater Penalty"
-      sbForeach="Skater:: compareRosterNumber"
-      sbAttr="role: Role: updatePtRowColor | rosterNumber: RosterNumber | warn: PenaltyCount: toWarnLevel"
+      sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
+      sbAttr="role: Role: updatePtRowColor | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: toWarnLevel"
       sbClass="Captain: Flags: ==='C'"
     >
       <td class="Role Bench ShowSome ShowOnLt" rowspan="2" sbClass="OnTrack: Role: ==='Bench'" sbSet="Role: 'Bench'">
@@ -82,8 +82,8 @@
     </tr>
     <tr
       class="Skater Jam"
-      sbForeach="Skater:: compareRosterNumber"
-      sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount: toWarnLevel"
+      sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
+      sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: toWarnLevel"
     >
       <td
         sbForeach="Penalty: 1,2,3,4,5,6,7,8,9,0: only"
