--- a/html/components/roster-tab/index.html
+++ b/html/components/roster-tab/index.html
@@ -37,7 +37,7 @@
               <tbody>
                 <tr
                   class="Skater"
-                  sbForeach="Skater:: compareRosterNumber"
+                  sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
                   sbAttr="flag: Flags: updateSkaterCount | role: Role | rosterNumber: RosterNumber"
                 >
                   <td class="RosterNumber" sbDisplay="RosterNumber" />
