--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -4,7 +4,6 @@
     <title>Display | CRG ScoreBoard</title>
     <script type="text/javascript" src="/external/jquery/jquery.js"></script>
     <script type="text/javascript" src="/json/core.js"></script>
-    <script type="text/javascript" src="/json/WS.js"></script>
     <script type="text/javascript" src="/views/common.js"></script>
   </head>
   <body sbPrefix="&: ScoreBoard.Settings.Setting(ScoreBoard.View : )">
@@ -25,7 +24,7 @@
           class="Name AutoFit"
           sbDisplay="AlternateName(scoreboard),Name"
           sbAutoFitOn="Logo, &.HideLogos"
-          sbCss="color: Color(scoreboard_fg) | background-color: Color(scoreboard_bg) | text-shadow: Color(scoreboard_glow): toShadow"
+          sbCss="color: Color(scoreboard.fg) | background-color: Color(scoreboard.bg) | text-shadow: Color(scoreboard.glow): toShadow"
         ></div>
         <div class="Logo" sbCss="background-image: Logo: toCssUrl">&nbsp;</div>
         <div class="Score Box AutoFit" sbDisplay="Score"></div>
@@ -36,20 +35,20 @@
         ></div>
         <div class="ShowInJam Clock StarPass AutoFit" sbDisplay="StarPass: toSP"></div>
         <div class="DotTimeouts Box" sbCss="background: Color(scoreboard_dots_bg)">
-          <div class="Dot Timeout1" sbClass="Used: Timeouts: <1" sbCss="background: Color(scoreboard_dots_fg)"></div>
-          <div class="Dot Timeout2" sbClass="Used: Timeouts: <2" sbCss="background: Color(scoreboard_dots_fg)"></div>
-          <div class="Dot Timeout3" sbClass="Used: Timeouts: <3" sbCss="background: Color(scoreboard_dots_fg)"></div>
+          <div class="Dot Timeout1" sbClass="Used: Timeouts: <1" sbCss="background: Color(scoreboard_dots.fg)"></div>
+          <div class="Dot Timeout2" sbClass="Used: Timeouts: <2" sbCss="background: Color(scoreboard_dots.fg)"></div>
+          <div class="Dot Timeout3" sbClass="Used: Timeouts: <3" sbCss="background: Color(scoreboard_dots.fg)"></div>
         </div>
-        <div class="DotOfficialReviews Box" sbCss="background: Color(scoreboard_dots_bg)">
+        <div class="DotOfficialReviews Box" sbCss="background: Color(scoreboard_dots.bg)">
           <div
             class="Dot OfficialReview1"
             sbClass="Retained: RetainedOfficialReview | Used: OfficialReviews: <1"
-            sbCss="background: Color(scoreboard_dots_fg)"
+            sbCss="background: Color(scoreboard_dots.fg)"
           ></div>
           <div
             class="Dot OfficialReviewHelper"
             sbClass="Retained: RetainedOfficialReview | Used: OfficialReviews: <1"
-            sbCss="background: Color(scoreboard_dots_fg)"
+            sbCss="background: Color(scoreboard_dots.fg)"
           ></div>
         </div>
         <div
